--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@ github：https://github.com/bzxg-space
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<title>一个句子</title>
 		<meta name="author" content="搬砖小哥" />
+		<!--解决http警报-->
+                <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 	</head>
 	<body>
